k8s-templates/ops-app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ops-app-deployment
  labels:
    app: ops-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ops-app
  template:
    metadata:
      labels:
        app: ops-app
    spec:
      containers:
        - name: ops-appz
          image: profemzy/blaze-app:v0.2
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              port: 80
              path: /metrics
          readinessProbe:
            httpGet:
              port: 80
              path: /metrics
            periodSeconds: 10
            initialDelaySeconds: 20
