k8s-templates/ops-app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-app-service
spec:
  type: NodePort

  selector:
    app: ops-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
