k8s-templates/ops-app/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issuer: letsencrypt-production
spec:
  tls:
    - secretName: ops-app-ssl
      hosts:
        - ops.infotitans.se
        - argocd.infotitans.se
        - metrics.infotitans.se
        - prom.infotitans.se
        - demo.infotitans.se
  rules:
    - host: ops.infotitans.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ops-app-service
                port:
                  number: 80
    - host: argocd.infotitans.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
    - host: metrics.infotitans.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
    - host: demo.infotitans.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metrics-app-service
                port:
                  number: 80
